traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:7: error: illegal start of simple expression
  while (! isInPosition(x-1,y-1)) match {
                                  ^